--- a/scss/layout/_navbar.scss
+++ b/scss/layout/_navbar.scss
@@ -24,7 +24,6 @@
     border: none;
     width: 2rem;
     height: 2rem;
-    padding-right: 2rem;
     box-sizing: content-box;
   }
   .hamburger.show {
@@ -39,12 +38,15 @@
       font-weight: var(--font-weight-regular);
       text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
     }
+    .brand-name:hover {
+      color: var(--secondary-color) !important;
+    }
     .brand-name.show {
       color: var(--primary-color);
     }
   }
 }
-.menu-collapsed {
+.collapse {
   display: none;
   height: 0;
   opacity: 0;
@@ -70,7 +72,7 @@
     display: flex;
     list-style: none;
     width: 100%;
-    a {
+    .a-nav {
       display: flex;
       justify-content: center;
       text-decoration: none;
@@ -86,16 +88,8 @@
     }
   }
 }
-.collapsed-menu.show {
+.collapse.show {
   display: flex;
   height: fit-content;
   opacity: 1;
-}
-
-.navprod {
-  a {
-    .brand-prod {
-      color: var(--primary-color);
-    }
-  }
 }
