--- a/scss/pages/_inspiracion.scss
+++ b/scss/pages/_inspiracion.scss
@@ -15,13 +15,7 @@
     justify-content: space-between;
     display: flex;
     flex-direction: row;
-    .h-1 {
-      position: absolute;
-      padding-left: 1rem;
-      padding-top: 1rem;
-      font-family: var(--font-family-alternates);
-      color: var(--secondary-color);
-    }
+
     .imgs-2 {
       display: flex;
     }
@@ -62,10 +56,13 @@
         flex-direction: column;
         padding-left: 1rem;
         padding-top: 1.5rem;
-        font-family: var(--font-family-secondary);
+        font-family: var(--font-family-alternates) !important;
         color: var(--primary-color);
         font-size: var(--font-size-small);
-        font-weight: var(--font-weight-regular);
+        font-weight: 500;
+        h3 {
+          font-weight: 700;
+        }
       }
     }
     .inspo-2 {
@@ -109,10 +106,13 @@
         flex-direction: column;
         padding-left: 1rem;
         padding-top: 1.5rem;
-        font-family: var(--font-family-secondary);
+        font-family: var(--font-family-alternates);
         color: var(--primary-color);
         font-size: var(--font-size-small);
         font-weight: var(--font-weight-regular);
+        h3 {
+          font-weight: 600;
+        }
       }
     }
   }
