--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -4,7 +4,7 @@ footer {
   min-width: 18rem;
   width: 100%;
   height: 50vh;
-  background-image: url(/assets/imgs/GENERAL/Backfooter.png);
+  background-image: url("https://github.com/FrancoKohler/TemasdosWeb/blob/main/assets/imgs/GENERAL/Backfooter.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
