--- a/scss/pages/_contacto.scss
+++ b/scss/pages/_contacto.scss
@@ -1,6 +1,6 @@
 main {
   .contacto-hero {
-    background-image: url("/assets/imgs/contactobg.png");
+    background-image: url("https://github.com/FrancoKohler/TemasdosWeb/blob/main/assets/imgs/contactobg.png");
     background-size: cover;
     background-position: center;
     height: 10em;
