--- a/scss/layout/_navbar.scss
+++ b/scss/layout/_navbar.scss
@@ -27,7 +27,7 @@
     box-sizing: content-box;
   }
   .hamburger.show {
-    content: url("https://github.com/FrancoKohler/TemasdosWeb/blob/main/assets/imgs/menubl.svg");
+    content: url("/assets/imgs/menubl.svg");
   }
   a {
     text-decoration: none;
