--- a/scss/pages/_category.scss
+++ b/scss/pages/_category.scss
@@ -74,7 +74,7 @@
     }
   }
   .sofa-category2 {
-    background-image: url("https://github.com/FrancoKohler/TemasdosWeb/blob/main/assets/imgs/GENERAL/BUTACASCAT.png");
+    background-image: url("/assets/imgs/GENERAL/BUTACASCAT.png");
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -135,7 +135,7 @@
     }
   }
   .sofa-category3 {
-    background-image: url("https://github.com/FrancoKohler/TemasdosWeb/blob/main/assets/imgs/GENERAL/MESITAREMO.jpg");
+    background-image: url("/assets/imgs/GENERAL/MESITAREMO.jpg");
     display: flex;
     flex-direction: column;
     justify-content: space-between;
