--- a/scss/style.scss
+++ b/scss/style.scss
@@ -18,6 +18,7 @@
 @use "pages/inspiracion";
 @use "pages/lowerindex";
 @use "pages/producto";
+@use "pages/sobre";
 
 /*COMPONENTS*/
 @use "components/overlays";
