--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,10 +1,10 @@
 footer {
-  position: relative;
+  position: absolute;
   min-height: 150px;
   min-width: 18rem;
   width: 100%;
   height: 50vh;
-  background-image: url("https://github.com/FrancoKohler/TemasdosWeb/blob/main/assets/imgs/GENERAL/Backfooter.png");
+  background-image: url("/assets/imgs/GENERAL/Backfooter.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
