--- a/scss/pages/_hero.scss
+++ b/scss/pages/_hero.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url("https://github.com/FrancoKohler/TemasdosWeb/blob/main/assets/imgs/GENERAL/FOTOSBG.png");
+  background-image: url("/assets/imgs/GENERAL/FOTOSBG.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
